[package]
author = "asobi"
categories = ["gui"]
description = "Simple timer that works with dioxus"
edition = "2021"
keywords = ["dioxus", "timer"]
license = "MIT"
name = "dioxus-timer"
repository = "https://github.com/asobininn/dioxus-timer"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "^0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "^1", features = ["time"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-std = "^1"
instant = {version = "^0.1", features = ["wasm-bindgen"]}
