[package]
author = "asobi"
categories = ["gui"]
description = "Simple timer that works with dioxus"
edition = "2021"
keywords = ["dioxus", "timer"]
license = "MIT"
name = "dioxus-timer"
repository = "https://github.com/asobininn/dioxus-timer"
version = "0.4.0"

[dependencies]
dioxus = "^0.6"
tokio = {version = "^1", features = ["time"]}